Fixing extension URL and name

--- a/source/pages/LAB_LB_FHIR_mapping_and_gaps_for_IG_files/stylesheet.css
+++ b/source/pages/LAB_LB_FHIR_mapping_and_gaps_for_IG_files/stylesheet.css
@@ -88,6 +88,7 @@ td
 	mso-background-source:auto;
 	mso-pattern:auto;
 	mso-protection:locked visible;
+	white-space:nowrap;
     word-wrap: break-word;
 	mso-rotate:0;}
 .xl65
