--- a/framework/_includes/header.html
+++ b/framework/_includes/header.html
@@ -56,14 +56,8 @@
 
 
       <div id="project-status" class="project-status"> <!-- ig title text -->
-        <b>{{ site.data.fhir.ig.title }} Implementation Guide</b>
-        {% if {{site.build}} == "ci" %}
-        CI Build
-        {% elsif {{site.build}} == "ballot" %}
-        (Release {{ site.data.fhir.ig.version }} Ballot)
-        {% else %}
-        (Release {{ site.data.fhir.ig.version }} )
-        {% endif %}
+        <b>{{ site.data.fhir.ig.title }} Implementation Guide </b>
+        (Release {{ site.data.fhir.ig.version }} STU 1 Ballot 1)
     </div><!-- end ig title text -->
 
   </div><!-- end container -->
