--- a/framework/_includes/publish-box.html
+++ b/framework/_includes/publish-box.html
@@ -1,4 +1,1 @@
-<p id="publish-box">
-{{site.data.fhir.ig.title}} Implementation Guide (v{{site.data.fhir.ig.version}}:
-<a href="https://confluence.hl7.org/display/HL7/HL7+Balloting" title="Standard for Trial-Use">STU</a> 1 Ballot 1), based on <a href="{{ site.data.fhir.path }}index.html">FHIR Version {{ site.data.fhir.version }}</a>. See the <a href="history.html">Directory of published versions.</a>
-</p>
+<!--ReleaseHeader--><p id="publish-box">Publish Box goes here</p><!--EndReleaseHeader-->
