Removal of Ballot and STU from header

--- a/framework/_includes/header.html
+++ b/framework/_includes/header.html
@@ -57,7 +57,7 @@
 
       <div id="project-status" class="project-status"> <!-- ig title text -->
         <b>{{ site.data.fhir.ig.title }} Implementation Guide </b>
-        (Release {{ site.data.fhir.ig.version }} STU 1 Ballot 1)
+        (Release {{ site.data.fhir.ig.version }})
     </div><!-- end ig title text -->
 
   </div><!-- end container -->
